<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>common</module>
        <module>domain</module>
        <module>api-common</module>
        <module>batch</module>
        <module>integration</module>
        <module>core-common</module>
        <module>core-api</module>
    </modules>
    <groupId>com.centram</groupId>
    <artifactId>centram</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <spring.boot.version>2.5.0</spring.boot.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
        <lombok.version>1.18.12</lombok.version>
        <model-mapper.version>2.4.5</model-mapper.version>
        <commons-codec.version>1.15</commons-codec.version>
        <jedis.version>3.7.0</jedis.version>
        <springfox-version>2.7.0</springfox-version>
        <jackson.version>2.13.0</jackson.version>
        <!--<hibernate.version>5.4.15.Final</hibernate.version>
        <spring.boot.version>2.6.1</spring.boot.version>-->
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>Shibboleth</id>
            <name>Shibboleth</name>
            <url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
        </repository>
    </repositories>
    <!--<build>
        <plugins>
            <plugin>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-maven-plugin</artifactId>
                <version>3.0.3</version>
            </plugin>
        </plugins>
    </build>-->
</project>